--- a/skeleton/style.css
+++ b/skeleton/style.css
@@ -2,56 +2,88 @@
 * {
     margin: 0;
   }
+  body{
+    margin: 0;
+    background-color:black;
+  }
 
   #add-todo{
-    width: 90%;
+    width: 70%;
     margin: 0 auto;
+    margin-top: 2%;
+    margin-bottom: 1%;
      }
-     input {
-        margin-top: 2%;
-        margin-bottom: 1%;
-        width: 20%;
-        padding: 10px;
-        font-size: 16px;
+
+  #todo-container{
+    width: 80%;
+    margin: 0 auto;
+  }
+  #description {
+    margin: 0;
+    border: none;
+    border-radius: 0;
+    width: 70%;
+    padding: 10px;
+    font-size: 16px;
       }
-      
-      ul li {
+  #submit{
+    padding: .8%;
+    background: #d9d9d9;
+    color: #555;
+    text-align: center;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: 0.3s;
+    border-radius: 0;
+  }
+  #submit:hover {
+    background-color: #bbb;
+
+  }
+ ul li {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
         cursor: pointer;
         position: relative;
-        padding: 7px 8px 7px 20px;
+        padding: 7px 8px 7px 50px;
         background: #eee;
         font-size: 25px;
         transition: 0.2s;
         user-select: none;
-      }
-        ul li:nth-child(odd) {
+}
+ul li:nth-child(odd) {
         background: #f9f9f9;
       }
-        ul li:hover {
+ul li:hover {
         background: #ddd;
       }
-        ul li.checked {
+ul li.checked {
         background: #888;
         color: #fff;
         text-decoration: line-through;
       }
-      ul li.checked::before {
+ul li.checked::before {
         content: '';
         position: absolute;
         border-color: #fff;
         border-style: solid;
         border-width: 0 2px 2px 0;
-        top: 10px;
+        top: 18px;
         left: 16px;
         transform: rotate(45deg);
         height: 15px;
         width: 7px;
       }
-      button{
+button{
         color: white;
-        float: right;
+        background-color: red;
+        opacity: .7;
         padding: 12px 16px 12px 16px;
-      
+        cursor: pointer;      
+      }
+      button:hover{
+         opacity: 1;
       }
 /* 
 *{
